# cable-thermal-model

./: .coveragerc  .pre-commit-config.yaml  .release-please-manifest.json  .release-please-manifest.json.license  CHANGELOG.md  README.md  SUPPORT.md  mkdocs.yml  pyproject.toml  release-please-config.json  sonar-project.properties
.github/assets/: levels_of_contribution.png.license
.github/workflows/: release-please.yml
cable_thermal_model/: README.md  __init__.py
cable_thermal_model/cable/: README.md  cable_spec_parsers.py
cable_thermal_model/cable/enums/: circuit_enums.py
cable_thermal_model/cable/schemas/: cable_input_schemas.py  cable_layer_input_schemas.py  circuit_schemas.py  pipe_schemas.py
cable_thermal_model/environment/: static_env.py  static_env_air.py  static_env_soil.py
cable_thermal_model/model/: abstract_model.py  model.py  model_air.py  model_factory.py
cable_thermal_model/model/cables/: abstract_cable.py  enum_classes_cable.py  fd_cable.py  pipe.py
cable_thermal_model/model/schemas/: __init__.py  model_input_schemas.py  model_output_schemas.py  run_options.py  state_schemas.py
cable_thermal_model/utils/: exceptions.py  str_utils.py
cable_thermal_model/validation/: cable_analysis.py  iec_60287_parameter_extractor.py
data/: settings.py
docs/: index.md
docs/get_started/: installation_and_overview.md
docs/theoretical_documentation/: heat_equation.md
tests/cable/: test_TB880_case_0.py  test_TB880_case_10.py  test_cable_circuit.py  test_cable_input_schemas.py  test_cable_layer_input_schemas.py  test_cable_spec_parsers.py
tests/environment/: test_static_env.py
tests/model/: test_abstract_model.py  test_model_air.py  test_model_soil.py  test_pipes.py
tests/model/cables/: __init__.py  test_3cores.py  test_abstract_cable.py  test_fd_cable.py  test_pipes.py
tests/model/schemas/: test_model_output_schemas.py
tests/validation/: test_cable_analysis.py
